--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "license": "ISC",
     "dependencies": {
         "nodemon": "^2.0.22"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Mariojey/ciphers-data.js.git"
     }
 }
